# ai-horde-nexus

./: .gitignore  CHECKLIST.md  Dockerfile  README.md  SPEC.md  docker-compose.yaml  main.py  pyproject.toml
.github/workflows/: ci.yml
configs/: config.example.yaml
src/: main.py  worker.py
src/backends/: adapters.py
src/core/: config.py  filters.py  health.py  horde_api.py  logger.py  params.py  stats.py
src/webui/: server.py
src/webui/static/: app.js  index.html
tests/: test_adapters.py  test_config.py  test_filters.py  test_frontend_contract.py  test_horde_api.py  test_params.py  test_stats.py  test_webui.py  test_worker.py
