[project]
name = "ai-horde-nexus"
version = "0.1.0"
description = "Multi-backend lightweight python ai-horde bridge"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.3",
    "aioresponses>=0.7.8",
    "pytest>=9.0.2",
    "pytest-aiohttp>=1.1.0",
    "pytest-asyncio>=1.3.0",
    "pyyaml>=6.0.3",
]
